# moerderspiel

./: .gitignore  moerderspiel.py  pyproject.toml
lib/: moerdergraph.py  moerdergraphall.py  moerderklassen.py  utils.py  wordconstruct.py
templates/: admin.html  ajaxframe.xml  auftrag.html  creategame.html  error.html  index.html  mainframe.html  newgameform.html  regeln.html  startgame.html  view.html  wall.html
