[project]
name = "moerderspiel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dateutils>=0.6.12",
    "flask>=3.1.2",
    "flask-genshi>=0.5.1",
    "genshi>=0.7.9",
    "graphviz>=0.21",
    "qrcode>=8.2",
    "twython>=3.9.1",
]
